--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.6"
+	},
+	"dependencies": {
+		"@supabase/supabase-js": "^2.90.1"
 	}
 }
